--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div>hello </div>
+    <div>hello <div class="mui-input-row">
+    	<label>Input</label>
+    	<input type="text" class="mui-input-clear" placeholder="带清除按钮的输入框">
+    </div>
+    </div>
 </body>
 </html>
