--- a/index.html
+++ b/index.html
@@ -298,6 +298,12 @@
 </section>
 
 <h1 style="color:royalblue;font-size: 40px!important;">hello,欢迎来到ice的博客</h1>
+
+<div id="" style="position: absolute;bottom: 24px; left: 50%;
+		            transform: translateX(-45%);">
+	<a href="./ice.html" style="margin: 24px;" >Personal introduction</a>
+    <a href="./blog.html" style="margin: 24px;">blog</a>
+</div>
 </body>
 
 </html>
