--- a/ice.html
+++ b/ice.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title></title>
-		<style type="text/css">
-			html{
-				background-image: url(./images/clouds_front.jpg);
-				background-repeat:no-repeat;
-				background-size: 100%;
-			}
-		</style>
-	</head>
-	<body>
-		<pre style="font-size:16px;margin-top: 100px;">
-			## hello git push --set-upstream gh-pages master欢迎来到ice的博客
+
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title></title>
+	<style type="text/css">
+		html {
+			background-image: url(./images/clouds_front.jpg);
+			background-repeat: no-repeat;
+			background-size: 100%;
+		}
+	</style>
+</head>
+
+<body>
+	<pre style="font-size:16px;margin-top: 100px;">
+			## hello git push --set-upstream gh-pages master欢迎来到冰点的博客
 			### Hi there 👋
 			
 			**ice9812/ice9812** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.
@@ -31,5 +33,6 @@
 			- ⚡ Fun fact: ...
 			ES6 教程：https://wangdoc.com/es6/
 		</pre>
-	</body>
+</body>
+
 </html>
